fix: fixed date-input label font styling to align with Figma (from paragraph-sm to paragraph-md)

--- a/packages/toolkit/components/date-input/_date-input.scss
+++ b/packages/toolkit/components/date-input/_date-input.scss
@@ -27,7 +27,7 @@
 }
 
 .ofh-date-input__label {
-  @include ofh-font('paragraph-sm');
+  @include ofh-font('paragraph-md');
 
   display: block;
   font-weight: $ofh-typography-weight-regular;
